# Application-Instrumentality-Project

./: .gitignore  ApplicationInstrumentalityProject.sln  Cargo.toml
ExecutableVanillaApplication/: Startup.cs
Magi/: Magi.csproj  Program.cs  Startup.cs
Magi.Execution/: ExecutableVanillaApplication.cs
Magi/Properties/: launchSettings.json
central-dogma/: Cargo.toml  build.rs
central-dogma/src/: main.rs  proto.rs  workspace_manager.rs  workstation.rs  workstation_manager.rs
common/: Cargo.toml
common/src/: lib.rs  message_read_buffer.rs  message_write_buffer.rs
executable-vanilla-application/c-sharp/: ApplicationInstrumentalityProject.sln
executable-vanilla-application/c-sharp/ExecutableVanillaApplication/: EvaEndpoint.cs  EvaPipe.cs  ExecutableVanillaApplication.csproj  ManagerMessage.cs
executable-vanilla-application/c-sharp/ExecutableVanillaApplication.Example.Console/: ExecutableVanillaApplication.Example.Console.csproj  Program.cs
executable-vanilla-application/c-sharp/ExecutableVanillaApplication.Tests/: ExecutableVanillaApplication.Tests.csproj  VarInt.Tests.cs
executable-vanilla-application/c-sharp/ExecutableVanillaApplication/Metadata/: Assembly.cs
executable-vanilla-application/c-sharp/ExecutableVanillaApplication/Utils/: CircularBuffer.cs  MemorySegment.cs  VarInt.cs
magi/: Cargo.toml  build.rs
magi/src/: application.rs  application_manager.rs  instance.rs  main.rs  message_buffer.rs  message_read_buffer.rs  message_write_buffer.rs  process.rs  proto.rs  workspace_manager.rs  workstation_manager.rs
proto/: application-management.proto  application_management.proto  application_management_local.proto  client_server.proto  eva_management.proto  local_management.proto  workstation-management.proto  workstation_management.proto  workstation_management_local.proto  workstation_management_remote.proto
ritsuko/: Cargo.toml  build.rs
ritsuko/src/: main.rs  proto.rs
