[package]
name = "central-dogma"
version = "0.1.0"
authors = ["Tomasz Rewak <tomaszrewak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
tonic = "0.5"
prost = "0.8"

[build-dependencies]
tonic-build = "0.5"