[package]
name = "central-dogma"
version = "0.1.0"
authors = ["Tomasz Rewak <tomaszrewak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.8"
tonic = "0.5"
prost = "0.8"
tokio-stream = "0.1"
futures-core = "0.3"
futures-util = "0.3"
async-stream = "0.3"
tokio = "1.0"
async-channel = "1.6"

[build-dependencies]
tonic-build = "0.5"
