[package]
name = "magi"
version = "0.1.0"
authors = ["Tomasz Rewak <tomaszrewak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["v4"] }
tonic = "0.5"
prost = "0.8"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
async-stream = "0.3"
gethostname = "0.2"

[build-dependencies]
tonic-build = "0.5"
