[package]
name = "ritsuko"
version = "0.1.0"
authors = ["Tomasz Rewak <tomaszrewak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.5"
prost = "0.8"
mio = "0.7"

[build-dependencies]
tonic-build = "0.5"
